--- a/work-3.html
+++ b/work-3.html
@@ -1,10 +1,10 @@
 <div class="row">
-          <div class="col-lg-5">
+          <div class="col-lg-4">
             <img src="img/portfolio/3.jpg" alt="Третья работа">
           </div>
-          <div class="col-lg-7">
+          <div class="col-lg-8">
             <h4>Сайт для чего-то</h4>
-            <p>Описание сайта</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum voluptate inventore alias quas sint. Nihil at perspiciatis ea nulla ut, odio quasi similique quidem vero aliquam harum sequi numquam adipisci.</p>
             <a href="https://vk.me/id6710548" class="modal-btn">Заказать такой сайт</a>
           </div>
         </div>
